--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,12 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta property="og:title" content="Book Palace">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://book-palace.azurewebsites.net/">
+    <meta property="og:description" content="A web application for avid readers who want to purchase new books.">
+    <meta property="og:image" content="https://book-palace.azurewebsites.net/images/bookstorephoto.jpeg" >
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -26,7 +31,7 @@
     -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <title>React App</title>
+    <title>Book Palace</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
