--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,15 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+    <meta name="description" content="A web application for avid readers who want to purchase new books.">
     <meta property="og:title" content="Book Palace">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://book-palace.azurewebsites.net/">
     <meta property="og:description" content="A web application for avid readers who want to purchase new books.">
     <meta property="og:image" content="https://book-palace.azurewebsites.net/images/bookstorephoto.jpeg" >
+    <meta name="twitter:card" content="summary_large_image">
+
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
