fixes to the meta tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,7 +10,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://book-palace.azurewebsites.net/">
     <meta property="og:description" content="A web application for avid readers who want to purchase new books.">
-    <meta property="og:image" content="https://book-palace.azurewebsites.net/images/bookstorephoto.jpeg" >
+    <meta property="og:image" content="https://book-palace.azurewebsites.net/images/bookstorephoto.png">
     <meta name="twitter:card" content="summary_large_image">
 
 
