--- a/client/public/index.html
+++ b/client/public/index.html
@@ -10,9 +10,13 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://book-palace.azurewebsites.net/">
     <meta property="og:description" content="A web application for avid readers who want to purchase new books.">
-    <meta property="og:image" content="https://book-palace.azurewebsites.net/images/bookstorephoto.png">
+    <meta property="og:image" content="%PUBLIC_URL%/images/book-store-photo.png">
     <meta name="twitter:card" content="summary_large_image">
-
+    <meta property="twitter:domain" content="book-palace.azurewebsites.net">
+    <meta property="twitter:url" content="https://book-palace.azurewebsites.net/">
+    <meta name="twitter:title" content="Book Palace">
+    <meta name="twitter:description" content="A web application for avid readers who want to purchase new books.">
+    <meta name="twitter:image" content="%PUBLIC_URL%/images/book-store-photo.png">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/apple-touch-icon.png" />
     <!--
